--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ steps:
       tags: latest
       platforms:
         - linux/amd64
-        - linux/arm64/v8
+        - linux/arm64
   - name: docker-to-quay
     image: thegeeklab/drone-docker-buildx:latest
     privileged: true
@@ -29,7 +29,7 @@ steps:
       tags: latest
       platforms:
         - linux/amd64
-        - linux/arm64/v8
+        - linux/arm64
   - name: docker-to-ghcr
     image: thegeeklab/drone-docker-buildx:latest
     privileged: true
@@ -43,4 +43,4 @@ steps:
       tags: latest
       platforms:
         - linux/amd64
-        - linux/arm64/v8
+        - linux/arm64
